# brainfuck

./: .clang-format  CMakeLists.txt  README.md
include/: interpreter.h  io_lib.h
src/: main.cpp
test/: interpreter.cpp  io.cpp
